--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ serde_json = "1.0"
 sysinfo = "0.30"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+
+[dev-dependencies]
+rand = "0.8"
+ctor = "0.2"
